apps/common/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketid-internal
  namespace: pocket-id
spec:
  selector:
    app: pocket-id
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
